# newsletter-customised

./: .env  Cargo.toml  Dockerfile  Justfile  README.md  configuration.yaml
.github/workflows/: ci.yaml
.sqlx/: query-50fffd5e87f97807ff0da8e3fcdb019796c4911cb533d2be8d0a65088558321a.json  query-7a60622a687595e541062b96abc5c6170f7f991503bed27b0570ade892691588.json  query-97230bfa7241ddef3944970dd734702d9aa9ae4d141da7c4f510a6054f0ce86b.json
migrations/: 20231230180433_create_subscriptions_table.sql  20240113184405_make_status_not_null_in_subscriptions.sql  20240113184816_add_token_column_in_subscriptions.sql
publication/: Cargo.toml  Dockerfile  Justfile  configuration.yaml  docker-compose.yaml
publication/domain/: Cargo.toml
publication/domain/src/: lib.rs  prelude.rs
publication/domain/src/subscriber/: error.rs  mod.rs  model.rs  prelude.rs  repository.rs
publication/domain/src/subscriber/model/: entities.rs  error.rs  events.rs  mod.rs  prelude.rs  repository.rs
publication/domain/src/subscriber/service/: commands.rs  mod.rs  prelude.rs  queries.rs
publication/infrastructure/gateways/: Cargo.toml
publication/infrastructure/repositories/: Cargo.toml
publication/infrastructure/repositories/migrations/: 20240204074407_create_subscribers_table.sql
publication/infrastructure/repositories/src/: lib.rs  prelude.rs  subscriber_sea_orm_repository.rs
publication/interface/api/: Cargo.toml
publication/interface/api/src/: container.rs  document.rs  error.rs  lib.rs  router.rs  runner.rs
publication/interface/api/src/checkers/: liveness.rs  readiness.rs
publication/interface/queue/: Cargo.toml
publication/interface/queue/src/: lib.rs
publication/interface/queue/src/listeners/: mod.rs  subscriber_created.rs
publication/runner/: Cargo.toml
publication/runner/src/: api.rs  configuration.rs  lib.rs  main.rs
publication/tests/: Cargo.toml
publication/volume/cache/: machine.json
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/api/: error.rs  mod.rs  router.rs  runner.rs
src/api/handlers/: check_health.rs  mod.rs  subscribe.rs
src/api/handlers/health/: check.rs  liveness.rs  readiness.rs
src/api/handlers/publication/: publish.rs
src/api/handlers/subscription/: confirm.rs  subscribe.rs
src/domain/: subscriber.rs
src/domain/subscriber/: error.rs  messenger.rs  mod.rs  model.rs  repository.rs
src/domain/subscription/: mod.rs
src/domain/subscription/subscriber/: messenger.rs  model.rs  prelude.rs  repository.rs
src/domain/subscription/subscription_token/: error.rs  model.rs  prelude.rs  repository.rs
src/infrastructure/: messengers.rs  mod.rs
src/infrastructure/repositories/: mod.rs  subscriber.rs  subscription_token.rs
src/infrastructure/subscription/subscriber/: messenger.rs  mod.rs  prelude.rs  repository.rs
src/infrastructure/subscription/subscription_token/: mod.rs  prelude.rs  repository.rs
src/repository/: subscriber.rs
subscription/: Cargo.toml  Dockerfile  Justfile  configuration.yaml  docker-compose.yaml  rustfmt.toml
subscription/domain/: Cargo.toml
subscription/domain/src/: lib.rs  prelude.rs
subscription/domain/src/subscriber/: error.rs  executor.rs  messenger.rs  mod.rs  model.rs  prelude.rs  reader.rs  repository.rs
subscription/domain/src/subscription_token/: error.rs  executor.rs  mod.rs  model.rs  prelude.rs  reader.rs  repository.rs
subscription/infrastructure/messengers/: Cargo.toml
subscription/infrastructure/messengers/src/: lib.rs  prelude.rs  subscriber_email_messenger.rs  subscriber_fake_messenger.rs
subscription/infrastructure/repositories/: Cargo.toml
subscription/infrastructure/repositories/migrations/: 20231230180433_create_subscriptions_table.sql  20240113155636_add_status_to_subscriptions.sql
subscription/infrastructure/repositories/src/: lib.rs  prelude.rs  subscriber_sea_orm_repository.rs  subscription_token_sea_orm_repository.rs
subscription/interface/api/: Cargo.toml  configuration.yaml
subscription/interface/api/src/: configuration.rs  container.rs  error.rs  lib.rs  router.rs  runner.rs
subscription/interface/api/src/checkers/: mod.rs  readiness.rs
subscription/interface/api/src/executors/: confirm.rs  subscribe.rs
subscription/interface/api/src/handlers/: confirmation.rs  mod.rs  subscription.rs
subscription/interface/api/src/readers/: inquire_confirmed_subscribers.rs  mod.rs
subscription/runner/: Cargo.toml
subscription/runner/src/: api.rs  configuration.rs  main.rs  telemetry.rs
subscription/tests/: Cargo.toml  test_configuration.yaml
subscription/tests/src/api/: app.rs  cases.rs  endpoints.rs  mod.rs
subscription/tests/tests/: health.rs  subscription.rs
tests/api/: health.rs  mod.rs  publication.rs  subscription.rs
tests/api/helper/: app.rs  cases.rs  mod.rs
