[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
mockall = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }

[dev-dependencies]
claims = "0.7"
fake = "2"

[lints]
workspace = true
