[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
api = { path = "../interface/api" }
domain = { path = "../domain" }
gateways = { path = "../infrastructure/gateways" }
repositories = { path = "../infrastructure/repositories" }

anyhow = "1"
confique = { version = "0.2", default-features = false, features = ["yaml"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
