[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
mockall = "0.12"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
fake = "2"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
