[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
api = { path = "../interface/api" }
repositories = { path = "../infrastructure/repositories" }
messengers = { path = "../infrastructure/messengers" }

anyhow = "1"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
