[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
domain = { path = "../domain" }
repositories = { path = "../infrastructure/repositories" }
messengers = { path = "../infrastructure/messengers" }
api = { path = "../interface/api" }
runner = { path = "../runner" }

fake = "2.9.2"
wiremock = "0.5.22"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "sea-orm-internal",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
reqwest = { version = "0.11.23", features = ["serde_json"] }
once_cell = "1.19.0"
sqlx = { version = "0.7.3", features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
