[package]
name = "queue"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
domain = { path = "../../domain" }

anyhow = "1"
aws-config = "1.1"
aws-sdk-sqs = "1.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.7", features = ["v4"] }

[lints]
workspace = true
