[package]
name = "messengers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
domain = { path = "../../domain" }

async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "serde_json"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
claims = "0.7"
fake = "2.9"
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
wiremock = "0.5"
