[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }

axum = "0.7"
anyhow = "1.0"
confique = { version = "0.2", default-features = false, features = ["yaml"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
fake = "2.9"
reqwest = { version = "0.11", features = ["json", "serde_json"] }
wiremock = "0.5"
