[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
domain = { path = "../../domain" }

axum = "0.7"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
readonly = "0.2"

[dev-dependencies]
fake = "2.9"
